--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -3,27 +3,27 @@
     padding: 0;
     margin: 0;
 }
-
+/* Above we have a * selector, which is a universal selctor. it is being used to apply rules to all our elements */
 body {
     background-color: #d9dcd6;
 }
-
+/* Above adds background color to the entire body */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/* above is our first class selector and it adds style to our class="header" tag */
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
+/* Above adds the style to our header h1 elements */
  .seo {
     color: #d9dcd6;
 }
-
+/* Above adds color to our span class tag giving the text seo color #d9dcd6 */
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -49,7 +49,7 @@ a {
 p {
     font-size: 16px;
 }
-
+/* The above 5 selectors give the style rules to the the elements within the header, and all the <a> & <p> elements as well*/
 .hero {
     height: 800px;
     width: 100%;
@@ -58,7 +58,7 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/* Above is a class selector that's tied to a img, the rules for the image along with the link are provide in CSS */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -68,7 +68,7 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+/* Above aplies floating rules with a margin to our classes "float-left" & "float-right" */
 .content {
     width: 75%;
     display: inline-block;
@@ -85,7 +85,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* Above applies the rules to our 2 big section elements on the webpage */
 .benefit-lead,
 .benefit-brand,
 .benefit-cost{
@@ -108,7 +108,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* Above are the rules for the nested sections within our "benefit" section class, that have been compiled */
 .search-engine-optimization,
 .online-reputation-management,
 .social-media-marketing {
@@ -132,7 +132,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* Above are the rules for the nested sections within our "content" section class, that have been compiled */
 
 .footer {
     padding: 30px;
@@ -144,3 +144,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+/* Above are the rules applied to our footer class and nested elements */
